# test-openblas

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  bit.c  bit2.c  build_bit.bat  build_bit.sh  build_complex.bat  build_dgesv.bat  build_dgesvd.bat  build_edgesvd.bat  build_nonblas.bat  complex.c  phpextension.md  tst_dgesv.c  tst_nonblas.c  tstcallfortran.c
.github/workflows/: tests.yml
linux/: aaaalapacke.h  aaaalapacke_utils.c  bit2.c
scripts/: a.txt
src/: bit.c  bit2.c  complex.c  tst_dgesvd.c  tst_edgesvd.c  tstgfortran.f90
vclib/: CMakeLists.txt  LAPACKE_cbbcsd.c  LAPACKE_cbbcsd_work.c  LAPACKE_cbdsqr.c  LAPACKE_cbdsqr_work.c  LAPACKE_cgbbrd.c  LAPACKE_cgbbrd_work.c  LAPACKE_cgbcon.c  LAPACKE_cgbcon_work.c  LAPACKE_cgbequ.c  LAPACKE_cgbequ_work.c  LAPACKE_cgbequb.c  LAPACKE_cgbequb_work.c  LAPACKE_cgbrfs.c  LAPACKE_cgbrfs_work.c  LAPACKE_cgbrfsx.c  LAPACKE_cgbrfsx_work.c  LAPACKE_cgbsv.c  LAPACKE_cgbsv_work.c  LAPACKE_cgbsvx.c  LAPACKE_cgbsvx_work.c  LAPACKE_cgbsvxx.c  LAPACKE_cgbsvxx_work.c  LAPACKE_cgbtrf.c  LAPACKE_cgbtrf_work.c  LAPACKE_cgbtrs.c  LAPACKE_cgbtrs_work.c  LAPACKE_cgebak.c  LAPACKE_cgebak_work.c  LAPACKE_cgebal.c  LAPACKE_cgebal_work.c  LAPACKE_cgebrd.c  LAPACKE_cgebrd_work.c  LAPACKE_cgecon.c  LAPACKE_cgecon_work.c  LAPACKE_cgedmd_work.c  LAPACKE_cgedmdq_work.c  LAPACKE_cgeequ.c  LAPACKE_cgeequ_work.c  LAPACKE_cgeequb.c  (+2675 more)
windows/: build.bat  client_generator.php  loadlib.c  openblas_client.c
